--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-  
-        
-        <script src="" async defer></script>
+  <h1>hello world</h1>
     </body>
 </html>
